--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "owl.carousel",
+  "name": "owl-carousel-allhomes",
   "description": "Touch enabled jQuery plugin that lets you create beautiful responsive carousel slider.",
   "version": "2.3.0",
   "homepage": "https://github.com/OwlCarousel2/OwlCarousel2",
-  "main": "./dist/owl.carousel.js",
-  "style": "./dist/assets/owl.carousel.css",
+  "main": "./dist/owl.carousel.allhomes.js",
+  "style": "./dist/assets/owl.carousel.allhomes.css",
   "author": {
     "name": "David Deutsch",
     "email": "deutsch@medienpark.net",
