--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "owl-carousel-allhomes",
+  "name": "owl.carousel",
   "description": "Touch enabled jQuery plugin that lets you create beautiful responsive carousel slider.",
   "version": "2.3.0",
   "homepage": "https://github.com/OwlCarousel2/OwlCarousel2",
-  "main": "./dist/owl.carousel.allhomes.js",
-  "style": "./dist/assets/owl.carousel.allhomes.css",
+  "main": "./dist/owl.carousel.js",
+  "style": "./dist/assets/owl.carousel.css",
   "author": {
     "name": "David Deutsch",
     "email": "deutsch@medienpark.net",
@@ -19,25 +19,29 @@
     "type": "git",
     "url": "git://github.com/OwlCarousel2/OwlCarousel2.git"
   },
+  "scripts": {
+    "build": "node_modules/.bin/grunt"
+  },
   "dependencies": {
     "jquery": ">=1.8.3"
   },
   "devDependencies": {
     "assemble": "~0.4.37",
     "blanket": "^1.1.7",
+    "bower": "^1.8.2",
     "foundation-sites": "~5.5.2",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-banner": "^0.4.0",
     "grunt-blanket-qunit": "^0.2.0",
     "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-compress": "~0.13.0",
+    "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.10.1",
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-qunit": ">=0.2.1",
+    "grunt-contrib-qunit": "^2.0.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-gh-pages": "^0.10.0",
